--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,14 @@
 
 :root {
     --bkg-color-one: #117050;
+    --bkg-color-two: #454545;
     /* -------------------------- */
     --border-color-one: #999999;
     --border-color-two: #117050;
+    --border-color-three: #454545;
     /* -------------------------- */
+    --color-one: #454545;
+    --color-two:#FFF;
 }
 
 * {
@@ -18,14 +22,51 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
-header .line {
-    background: var(--bkg-color-one);
-    height: 10px;
-}
-
 .container {
     max-width: 1140px;
     margin: auto;
+}
+
+.bar{
+    width: 168px;
+    height: 22px;
+    background: var(--bkg-color-one);
+}
+
+h1{
+    font-family: "Oswald", sans-serif;
+    font-weight: bold;
+    font-size: 90px;
+    line-height: 90px;
+    margin: 0%;
+    margin-bottom: 30px;
+}
+
+h2{
+    font-family: "Oswald", sans-serif;
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 45px;
+    margin: 20px 0;
+}
+
+.button{
+    display: inline-block;
+    border: 2px solid var(--border-color-three);
+    padding: 10px 30px;
+    border-radius: 3px;
+    color: var(--color-one);
+    text-decoration: none;
+}
+
+.button:hover{
+    color: var(--color-two);
+    background: var(--bkg-color-two);
+}
+
+header .line {
+    background: var(--bkg-color-one);
+    height: 10px;
 }
 
 .header--area {
@@ -81,21 +122,13 @@ header .line {
     height: 24px;
 }
 
+
 .banner {
     background: url(/assets/images/bg.jpg);
     background-position: center;
     background-size: cover;
     padding-top: 90px;
     padding-bottom: 90px;
-}
-
-.banner h1 {
-    font-family: "Oswald", sans-serif;
-    font-weight: bold;
-    font-size: 90px;
-    line-height: 90px;
-    margin: 0%;
-    margin-bottom: 30px;
 }
 
 .banner--images {
@@ -115,14 +148,31 @@ header .line {
     grid-template-columns: repeat(2, 1fr);
 }
 
-.area1--content {}
+.area1--content {
+    padding: 80px;
+}
 
+.area1--quote{
+    margin-bottom: 30px;
+}
+
+.area1--text{
+    margin-bottom: 50px;
+    line-height: 25px;
+}
 .area1--img1 {
     background: green;
+    height: 350px;
+    background-image: url(/assets/images/f2.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .area1--img2 {
     background: rebeccapurple;
     grid-column: 2/3;
     grid-row: 1/3;
+    background-image: url(/assets/images/f1.jpg);
+    background-size: cover;
+    background-position: center;
 }
