--- a/assets/style.css
+++ b/assets/style.css
@@ -127,8 +127,8 @@ header .line {
     background: url(/assets/images/bg.jpg);
     background-position: center;
     background-size: cover;
-    padding-top: 90px;
-    padding-bottom: 90px;
+    padding-top: 190px;
+    padding-bottom: 190px;
 }
 
 .banner--images {
@@ -160,19 +160,48 @@ header .line {
     margin-bottom: 50px;
     line-height: 25px;
 }
+
 .area1--img1 {
-    background: green;
-    height: 350px;
+    height: 450px;
     background-image: url(/assets/images/f2.jpg);
     background-size: cover;
     background-position: center;
 }
 
 .area1--img2 {
-    background: rebeccapurple;
     grid-column: 2/3;
     grid-row: 1/3;
     background-image: url(/assets/images/f1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.area2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area2--content {
+    padding: 80px;
+}
+
+
+.area2--text{
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+
+.area2--img1 {
+    height: 650px;
+    background-image: url(/assets/images/f4.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.area2--img2 {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    background-image: url(/assets/images/f3.jpg);
     background-size: cover;
     background-position: center;
 }
