--- a/assets/style.css
+++ b/assets/style.css
@@ -205,3 +205,27 @@ header .line {
     background-size: cover;
     background-position: center;
 }
+
+.area3 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.area3--content {
+    padding: 330px 80px;
+    background-image: url(/assets/images/bg2.jpg);
+    background-size: cover;
+    background-position: left;
+}
+
+
+.area3--text{
+    margin-bottom: 50px;
+    line-height: 25px;
+}
+
+.area3--img1 {
+    background-image: url(/assets/images/f5.jpg);
+    background-size: cover;
+    background-position: center;
+}
