--- a/assets/style.css
+++ b/assets/style.css
@@ -126,7 +126,7 @@ header .line {
 
 
 .banner {
-    background: url(/assets/images/bg.jpg);
+    background: url(./assets/images/bg.jpg);
     background-position: center;
     background-size: cover;
     padding-top: 190px;
@@ -165,7 +165,7 @@ header .line {
 
 .area1--img1 {
     height: 450px;
-    background-image: url(/assets/images/f2.jpg);
+    background-image: url(./assets/images/f2.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -173,7 +173,7 @@ header .line {
 .area1--img2 {
     grid-column: 2/3;
     grid-row: 1/3;
-    background-image: url(/assets/images/f1.jpg);
+    background-image: url(./assets/images/f1.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -195,7 +195,7 @@ header .line {
 
 .area2--img1 {
     height: 650px;
-    background-image: url(/assets/images/f4.jpg);
+    background-image: url(./assets/images/f4.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -203,7 +203,7 @@ header .line {
 .area2--img2 {
     grid-column: 1/2;
     grid-row: 1/3;
-    background-image: url(/assets/images/f3.jpg);
+    background-image: url(./assets/images/f3.jpg);
     background-size: cover;
     background-position: center;
 }
