--- a/assets/style.css
+++ b/assets/style.css
@@ -165,7 +165,7 @@ header .line {
 
 .area1--img1 {
     height: 450px;
-    background-image: url(./images/f2.jpg);
+    background: url(./images/f2.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -173,7 +173,7 @@ header .line {
 .area1--img2 {
     grid-column: 2/3;
     grid-row: 1/3;
-    background-image: url(./images/f1.jpg);
+    background: url(./images/f1.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -195,7 +195,7 @@ header .line {
 
 .area2--img1 {
     height: 650px;
-    background-image: url(./images/f4.jpg);
+    background: url(./images/f4.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -203,7 +203,7 @@ header .line {
 .area2--img2 {
     grid-column: 1/2;
     grid-row: 1/3;
-    background-image: url(./images/f3.jpg);
+    background: url(./images/f3.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -227,7 +227,7 @@ header .line {
 }
 
 .area3--img1 {
-    background-image: url(./images/f5.jpg);
+    background: url(./images/f5.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -248,13 +248,13 @@ header .line {
 }
 
 .area4--img1 {
-    background-image: url(./images/bg3.jpg);
+    background: url(./images/bg3.jpg);
     background-position: left;
     margin-left: 350px;
 }
 
 .area5 {
-    background-image: url(./images/bg4.jpg);
+    background: url(./images/bg4.jpg);
     background-size: cover;
     background-position: center;
     height: 1000px;
